k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehiclerental-be
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vehiclerental-be
  template:
    metadata:
      labels:
        app: vehiclerental-be
    spec:
      containers:
        - name: vehiclerental-be-container
          image: nairafiany/vehiclerental-2306240124-be:REPLACE_ME_TAG
          ports:
            # Port internal yang diekspos oleh aplikasi Spring Boot Anda
            - containerPort: 8080
